testsuite/poke.pkl/ass-diag-5.pk
/* { dg-do compile } */

var b = [[1],[2]];
fun foo = any[]: { return [1,2,3]; }
b[0] = foo;  /* { dg-error "" } */
